--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -2,10 +2,8 @@
 
 .home-container{
     height: 100vh;
-    width: 100vw;
 
     .profile{
-        width: 100vw;
         height: 90vh;
         display: flex;
         justify-content: center;
