--- a/pages/maintenance/maintenance.scss
+++ b/pages/maintenance/maintenance.scss
@@ -6,8 +6,10 @@ h1{
 }
 
 .animation-container{
-    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
+    padding: 5rem;
     background-color: var(----background-color);
-    padding: 10rem;
 }
